--- a/index.html
+++ b/index.html
@@ -1,10 +1,186 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+  <link rel="stylesheet" href="./fonts/fonts.css">
+  <link rel="stylesheet" href="./styles/global.css">
+  <link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+
+  <header class="header">
+
+    <nav class="header__menu">
+      <ul class="header__links-list">
+        <li class="header__links-item header__links-list-item_no-bullit">
+          главная
+        </li>
+        <li class="header__links-item">
+          <span class="accent-underline">посмотреть лоты</span>
+        </li>
+        <li class="header__links-item">
+          <span class="accent-underline">об аукционе</span>
+        </li>
+      </ul>
+    </nav>
+
+    <a class="header__logo">
+      <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип: оно тебе надо">
+    </a>
+
+    <address class="header__address">
+      <div class="header__address-text address">
+        <a href="tel:+9 999 555 5555">
+          <span class="accent-underline">+9 999 555 5555</span>
+        </a>
+        <a href="mailto:info@sobaka.ge">
+          <span class="accent-underline">info@sobaka.ge</span>
+        </a>
+        <p>наб. Принсенграхт 263-<br> 265, Амстердам</p>
+      </div>
+    </address>
+
+  </header>
+
+  <main class="main">
+
+    <section class="cover">
+      <h1 class="cover__title">
+        <span class="aligned-text letter-spacing-extended">оно</span>
+        <span class="aligned-text aligned-text_center letter-spacing-extended">
+          теб<span class="no-letter-spacing">е</span>
+        </span>
+        <span class="aligned-text aligned-text_right letter-spacing-extended">
+          нaд<span class="no-letter-spacing">о</span>
+        </span>
+      </h1>
+      <div class="cover__description">
+        <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
+        <button class="bet-button">сделать ставку</button>
+      </div>
+      <div class="overlay"></div>
+    </section>
+
+    <section class="lots">
+      <h2 class="lots__heading">лоты</h2>
+      <ul class="lots__card-list">
+        <li class="lots__card-list-item card_type_film">
+          <a class="card-link">
+            <article class="card">
+              <div class="overlay"></div>
+              <h3 class="card__title">
+                <span class="accent-underline">Фильм режиссёра, который бросил киношколу</span>
+              </h3>
+              <p class="card__text">
+                Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр —
+                Пол Томас Андерсон?
+              </p>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item card_type_book">
+          <a class="card-link">
+            <div class="overlay"></div>
+            <article class="card">
+              <h3 class="card__title">
+                <span class="accent-underline">Книга, где описан один скучный день из жизни рекламного агента</span>
+              </h3>
+              <p class="card__text">
+                Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней
+                одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И
+                это
+                всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
+              </p>
+            </article>
+          </a>
+        </li>
+        <li class="lots__card-list-item card_type_picture">
+          <div class="overlay"></div>
+          <a class="card-link">
+            <article class="card">
+              <h3 class="card__title">
+                <span class="accent-underline">Картина, которую повторит даже 5-летний сын маминой подруги</span>
+              </h3>
+              <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на
+                инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали,
+                что это — одна из революционных работ Кандинского?</p>
+            </article>
+          </a>
+        </li>
+      </ul>
+      <a href="" class="lots__look-more-link"><span class="accent-underline">посмотреть больше</span></a>
+    </section>
+
+    <section class="about">
+      <div class="about__logo">
+        <div class="about__black-circle">
+          <div class="about__logo-image"></div>
+        </div>
+      </div>
+      <div class="about__content">
+        <h3 class="about__title">Об аукционе</h3>
+        <div class="about__text">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не
+            должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую
+            может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+          </p>
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
+            Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную
+            культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
+            культовыми.
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <address class="footer__address">
+      <div class="footer__address-text address">
+        <a href="tel:+9 999 555 5555">
+          <span class="accent-underline">+9 999 555 5555</span>
+        </a>
+        <a href="mailto:info@sobaka.ge">
+          <span class="accent-underline">info@sobaka.ge</span>
+        </a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
+      </div>
+    </address>
+    <nav class="footer__menu">
+      <ul class="footer__menu-list">
+        <li class="footer__menu-link footer__menu-link_active">главная</li>
+        <li class="footer__menu-link"><span class="accent-underline">посмотреть лоты</span></li>
+        <li class="footer__menu-link"><span class="accent-underline">об аукционе</span></li>
+      </ul>
+    </nav>
+
+    <ul class="footer__links">
+      <li class="footer__social-item">
+        <a class="footer__social-link">
+          <img class="footer__social-icon" src="./images/yt.svg" alt="Ссылка на Pinterest">
+        </a>
+      </li>
+      <li class="footer__social-item">
+        <a class="footer__social-link">
+          <img class="footer__social-icon" src="./images/vk.svg" alt="Ссылка на Pinterest">
+        </a>
+      </li>
+      <li class="footer__social-item">
+        <a class="footer__social-link">
+          <img class="footer__social-icon" src="./images/pinterest.svg" alt="Ссылка на Pinterest">
+        </a>
+      </li>
+    </ul>
+  </footer>
+
+</body>
+
 </html>
