исправлены ошибки автотеста 1

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <address class="header__address">
       <div class="header__address-text address">
-        <a href="tel:+9 999 555 5555">
+        <a href="tel:+99995555555">
           <span class="accent-underline">+9 999 555 5555</span>
         </a>
         <a href="mailto:info@sobaka.ge">
@@ -145,7 +145,7 @@
   <footer class="footer">
     <address class="footer__address">
       <div class="footer__address-text address">
-        <a href="tel:+9 999 555 5555">
+        <a href="tel:+99995555555">
           <span class="accent-underline">+9 999 555 5555</span>
         </a>
         <a href="mailto:info@sobaka.ge">
