--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </ul>
     </nav>
 
-    <a class="header__logo">
+    <a class="header__logo" href="0">
       <img class="header__logo-image" src="./images/logo-black.svg" alt="Логотип: оно тебе надо">
     </a>
 
@@ -70,7 +70,7 @@
       <h2 class="lots__heading">лоты</h2>
       <ul class="lots__card-list">
         <li class="lots__card-list-item card_type_film">
-          <a class="card-link">
+          <a class="card-link" href="0">
             <article class="card">
               <div class="overlay"></div>
               <h3 class="card__title">
@@ -84,7 +84,7 @@
           </a>
         </li>
         <li class="lots__card-list-item card_type_book">
-          <a class="card-link">
+          <a class="card-link" href="0">
             <div class="overlay"></div>
             <article class="card">
               <h3 class="card__title">
@@ -101,7 +101,7 @@
         </li>
         <li class="lots__card-list-item card_type_picture">
           <div class="overlay"></div>
-          <a class="card-link">
+          <a class="card-link" href="0">
             <article class="card">
               <h3 class="card__title">
                 <span class="accent-underline">Картина, которую повторит даже 5-летний сын маминой подруги</span>
@@ -113,7 +113,7 @@
           </a>
         </li>
       </ul>
-      <a href="" class="lots__look-more-link"><span class="accent-underline">посмотреть больше</span></a>
+      <a href="0" class="lots__look-more-link"><span class="accent-underline">посмотреть больше</span></a>
     </section>
 
     <section class="about">
@@ -164,17 +164,17 @@
 
     <ul class="footer__links">
       <li class="footer__social-item">
-        <a class="footer__social-link">
+        <a class="footer__social-link" href="0">
           <img class="footer__social-icon" src="./images/yt.svg" alt="Ссылка на Pinterest">
         </a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link">
+        <a class="footer__social-link" href="0">
           <img class="footer__social-icon" src="./images/vk.svg" alt="Ссылка на Pinterest">
         </a>
       </li>
       <li class="footer__social-item">
-        <a class="footer__social-link">
+        <a class="footer__social-link" href="0">
           <img class="footer__social-icon" src="./images/pinterest.svg" alt="Ссылка на Pinterest">
         </a>
       </li>
