--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
     <ul class="footer__links">
       <li class="footer__social-item">
         <a class="footer__social-link" href="0">
-          <img class="footer__social-icon" src="./images/yt.svg" alt="Ссылка на Pinterest">
+          <img class="footer__social-icon" src="./images/yt.svg" alt="Ссылка на YouTube">
         </a>
       </li>
       <li class="footer__social-item">
         <a class="footer__social-link" href="0">
-          <img class="footer__social-icon" src="./images/vk.svg" alt="Ссылка на Pinterest">
+          <img class="footer__social-icon" src="./images/vk.svg" alt="Ссылка на VK">
         </a>
       </li>
       <li class="footer__social-item">
